--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -4,4 +4,21 @@ body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: Helvetica;
+
+    ::-webkit-scrollbar {
+        width: 6px;
+    }
+    ::-webkit-scrollbar-track {
+        border-radius: 10px;
+    }
+    ::-webkit-scrollbar-thumb {
+        background-color: rgba(0, 0, 0, 0.2);
+        border-radius: 10px;
+        transition: all 0.2s ease-in-out;
+    }
+    ::-webkit-scrollbar-thumb:hover {
+        cursor: pointer;
+        background-color: rgba(0, 0, 0, 0.3);
+    }
 }
