fear: article detail

--- a/src/assets/styles/mixins.less
+++ b/src/assets/styles/mixins.less
@@ -1,4 +1,4 @@
-@size-list: 8, 12, 24, 32;
+@size-list: 8, 12, 16, 24, 32;
 
 .loop(@length) when (@length > 0) {
     @width: extract(@size-list, @length);
