--- a/src/assets/styles/mixins.less
+++ b/src/assets/styles/mixins.less
@@ -38,3 +38,11 @@
     display: flex;
     justify-content: center;
 }
+
+.ellipsis {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    display: -webkit-box;
+}
